<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#dbf4f1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/test_title"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName_hint" />

        <EditText
            android:id="@+id/userEmail_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userEmail_hint"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_one"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/quiz_one_choice_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_one_a" />

            <CheckBox
                android:id="@+id/quiz_one_choice_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_one_b" />

            <CheckBox
                android:id="@+id/quiz_one_choice_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_one_c" />

            <CheckBox
                android:id="@+id/quiz_one_choice_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_one_d" />

            <CheckBox
                android:id="@+id/quiz_one_choice_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_one_e" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_two"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_two_d" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_two_a" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_two_b" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_two_c" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_three"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/quiz_three_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quiz_three_ans_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_four"
                android:textSize="16sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_four_a" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_four_b" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_four_c" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_four_d" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_four_e" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_four_f" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_four_g" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="#93de5a"
            android:onClick="submitTest"
            android:text="@string/submit_button_text" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Results"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</ScrollView>
