<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbf4f1"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".PersonalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/personal_info_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:text="@string/personal_info_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/firstName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName_hint" />

        <EditText
            android:id="@+id/lastName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName_hint" />

        <EditText
            android:id="@+id/userEmail_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userEmail_hint"
            android:inputType="textEmailAddress" />

    </LinearLayout>


    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="startButton"
        android:text="@string/start_button"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />


</RelativeLayout>
